sys/arm64/arm64/vm_machdep.c
@@ -55,7 +55,7 @@ __FBSDID("$FreeBSD$");
 #include <machine/vfp.h>
 #endif
 
-uint32_t initial_fpcr = VFPCR_DN | VFPCR_FZ;
+uint32_t initial_fpcr = VFPCR_DN;
 
 #include <dev/psci/psci.h>
 
